<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movie_api"
            android:icon="@drawable/ic_review"
            android:title="@string/menu_api" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_reservation" />
    </group>

    <item android:title="@string/menu_setting">
        <menu>
            <item
                android:id="@+id/nav_user_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_user_setting" />
        </menu>
    </item>

</menu>
