<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.an.cinemaheaven.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_movie_api"
        android:name="com.an.cinemaheaven.ui.movieApi.MovieApiFragment"
        android:label="@string/menu_api"
        tools:layout="@layout/fragment_movie_api" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.an.cinemaheaven.ui.reservation.ReservationFragment"
        android:label="@string/menu_reservation"
        tools:layout="@layout/fragment_reservation" />


    <fragment
        android:id="@+id/nav_user_setting"
        android:name="com.an.cinemaheaven.ui.userSetting.userSettingFragment"
        android:label="@string/menu_user_setting"
        tools:layout="@layout/fragment_user_setting" />

    <fragment
        android:id="@+id/nav_movie_detail"
        android:name="com.an.cinemaheaven.MovieDetailFragment"
        tools:layout="@layout/fragment_movie_detail" >
        <action
            android:id="@+id/action_nav_movie_detail_to_nav_movie_api"
            app:destination="@id/nav_movie_api" />
        <action
            android:id="@+id/action_nav_movie_detail_to_nav_reservation"
            app:destination="@id/nav_reservation" />
        <action
            android:id="@+id/action_nav_movie_detail_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_movie_detail_to_nav_user_setting"
            app:destination="@id/nav_user_setting" />
    </fragment>


</navigation>